Ingress/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: phpadmin.abdelali.com
    http:
      paths:
      - pathType: Exact
        path: /
        backend:
          service:
            name: myadmin-service
            port:
              number: 80
  # - host: "*.foo.com"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/foo"
  #       backend:
  #         service:
  #           name: service2
  #           port:
  #             number: 80
